# test-data-generation

./: .appveyor.yml  .gitignore  .project  .travis.yml  An Introduciton to Test Data Generation.pptx  CONTRIBUTING.md  Cargo.toml  README.md  TESTING.md  travis.yml
.github/workflows/: development.yaml  master.yaml
benches/: 01_profile.rs  02_data_sample_parser.rs
docs/: Test-Data-Generator-Architecture.xml  index.html  profile.html  references.html
docs/configs/: Configs.t.html  index.html  sidebar-items.js  struct.Configs.html
docs/data/: sidebar-items.js
docs/data/field/: ConvertToBytes.t.html  enum.FieldType.html  sidebar-items.js  struct.Field.html  trait.ConvertToBytes.html
docs/data_sample_parser/: DataSampleParser.t.html  index.html  sidebar-items.js
docs/js/: script.js
docs/params/: struct.Params.html
docs/profile/: index.html
docs/profile/fact/: index.html  sidebar-items.js  struct.Fact.html
docs/profile/pattern/: index.html  struct.Pattern.html
docs/profile/pattern_placeholder/: index.html
docs/profile/profile/: index.html  sidebar-items.js  struct.Profile.html
docs/style/: style.css
examples/: 01_demo.rs  02_demo.rs  03_demo.rs
src/: PULL_REQUESTS.md  configs.rs  data_sample_parser.rs  lib.rs  macros.rs  main.rs.bck  shared.rs
src/config/: mod.rs  params.rs
src/data/: field.rs  mod.rs
src/engine/: mod.rs
src/params/: mod.rs  params.rs
src/profile/: fact.rs  macros.rs  mod.rs  pattern.rs  pattern_placeholder.rs  profile.rs
src/test_data_generator/: configs.rs  data_sample_parser.rs  mod.rs  params.rs
src/test_data_generator/profile/: fact.rs  mod.rs  pattern.rs  pattern_placeholder.rs  profile.rs
tests/: configs.rs  data_sample_parser.rs  engine.rs  fact.rs  field.rs  initialization.rs  integration_test.rs  pattern.rs  pattern_placeholder.rs  performance_test.rs  performance_tests.rs  profile.rs  shared.rs  unit_test-data-generation-utility.rs
tests/config/: log4rs.yaml
tests/samples/: demo-03.json  empty-dsp.json  names.txt  not-readable.json  sample-0.2.1-dsp.json  sample-00-dsp.json  sample-00-profile.json  sample-00.csv  sample-01 - Copy.csv  sample-01-dsp.json  sample-01.csv  sample-02.csv  sample-names-1k.csv  sample-names.csv
