[package]
name = "test-data-generation"
version = "0.1.0"
authors = ["dsietz <davidsietz@yahoo.com>"]
repository = "https://github.com/dsietz/test-data-generation.git"
license = "Apache 2.0"
readme = "README.md"

[dependencies]
config       = "*"
lazy_static  = "0.2"
log          = "0.3"
log4rs       = "0.7.0"
serde        = "1.0"
serde_derive = "1.0"
serde_json   = "1.0"
serde_yaml   = "0.7.1"
yaml-rust    = "0.3.5"
regex        = "0.2"
rand         = "0.3"
crossbeam    = "0.3.0"
csv          = "1.0.0-beta.3"