[package]
name = "test-data-generation"
version = "0.1.0"
authors = ["dsietz <davidsietz@yahoo.com>"]
repository = "https://github.com/dsietz/test-data-generation.git"
documentation = "https://docs.rs/test-data-generation/"
readme = "README.md"
license = "Apache-2.0"
keywords = ["data", "testing", "generate", "parser", "sample"]
categories = ["algorithms", "development-tools::testing", "parsing", "text-processing", "simulation"]
description = "A simple to use, light-weight library that analyzes sample data to build algorithms and generates realistic test data."
exclude = [
    "examples/*",
    "target/*",
	"tests/*",
	"benches/*",
]

[badges]
travis-ci = { repository = "dsietz/test-data-generation" }
appveyor = { repository = "dsietz/test-data-generation" }
coveralls = { repostiory = "dsietz/test-data-generation", branch = "master" }
is-it-maintained-issue-resolution = { repository = "dsietz/test-data-generation" }
is-it-maintained-open-issues = { repository = "dsietz/test-data-generation" }
maintenance = {status = "passively-maintained"}

[dependencies]
config       = "0.8.0"
lazy_static  = "0.2"
log          = "0.3"
log4rs       = "0.7.0"
serde        = "1.0"
serde_derive = "1.0"
serde_json   = "1.0"
serde_yaml   = "0.7.1"
yaml-rust    = "0.3.5"
regex        = "0.2"
rand         = "0.3"
crossbeam    = "0.3.2"
csv          = "1.0.0-beta.5"
levenshtein  = "1.0.3"
rayon        = "1.0.2"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.doc]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4
