[package]
name = "test-data-generation"
version = "0.3.2"
edition = "2018"
authors = ["dsietz <davidsietz@yahoo.com>"]
repository = "https://github.com/dsietz/test-data-generation.git"
documentation = "https://docs.rs/test-data-generation/"
readme = "README.md"
license = "Apache-2.0"
keywords = ["data", "testing", "generate", "parser", "sample"]
categories = ["algorithms", "development-tools::testing", "parsing", "text-processing", "simulation"]
description = "A simple to use, light-weight library that analyzes sample data to build algorithms and generates realistic test data."
exclude = [
    "examples/*",
    "target/*",
	"tests/*",
	"benches/*",
]

[badges]
travis-ci = { repository = "dsietz/test-data-generation" }
appveyor = { repository = "dsietz/test-data-generation" }
coveralls = { repostiory = "dsietz/test-data-generation", branch = "master" }
is-it-maintained-issue-resolution = { repository = "dsietz/test-data-generation" }
is-it-maintained-open-issues = { repository = "dsietz/test-data-generation" }
maintenance = {status = "passively-maintained"}

[dependencies]
once_cell  = "1.8"
log          = "0.4"
serde        = "1.0"
serde_derive = "1.0"
serde_json   = "1.0"
serde_yaml   = "0.8"
yaml-rust    = "0.4"
regex        = "1.3"
rand         = "0.7"
crossbeam    = "0.7"
csv          = "1.1"
levenshtein  = "1.0"
[dependencies.indexmap]
version = "1.7.0"
features = ["serde-1"]

[dev-dependencies]
log4rs       = "1.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
